# artdaq-runcontrol-gui

./: CMakeLists.txt  CMakePresets.json
artdaq-runcontrol/: CMakeLists.txt
artdaq-runcontrol/resources/: CMakeLists.txt
artdaq-runcontrol/resources/images/: CMakeLists.txt
ups/: product_deps
